--- a/Components/Pages/Nl-to-sql.razor
+++ b/Components/Pages/Nl-to-sql.razor
@@ -580,15 +580,11 @@
     {
         "Show me the total number of claims submitted in May 2025.",
         "Fetch all claims where the status is 'Paid' and the PaidDate is between January 2025 and March 2025",
-        "What is the denial rate for claims submitted this year?",
         "List top 5 providers by total paid amount this year.",
-        "Show me top 10 members based on claims paid amount in 2025.",
-        "Give me claims pending for more than 60 days.",
-        "Show all claims for member Enrollment Id ES0001 in 2025.",
-        "Claims with no Enrollment Id",
-        "Claims without active enrollment of the member",
+        "Fetch top 5 member with highest paid claims for May 2025",
+        "List of Members who have birthday in Jan 2025",
+        "List top 5 provider bed types with high bedcapacity",
         "show me the top 10 List of claimEdit status is Pend",
-        "show me the top 10 List of claimEdit status is Deny",
         "Show me the duplicate members with same SSN and Enrollment year but different Member ID",
         "Show me the top 10 providers with the highest number of capitation claims in the last 6 months",
     };
